1.71:
  Fixed issue MR-495 - Having a negative range in port scan creates memory exhaustion.
  Fixed issue MR-514 - Window Proxy test failed without close button
  Fixed issue MR-521 - Right-Clicking in "Sessions" panel crashes mRemoteNG
  Fixed issue MR-525 - Could not start on windows 7 64bit
  Fixed issue MR-538 - RDP loses connection when hiding config or connections pane
  Made minor improvements to the port scan functionality.

1.71 Beta 5 (2013-06-09):
  Fixed issue MR-491 - Could not start RDP Connection
  Fixed issue MR-499 - TS Gateway is not working in latest release 1.71
  Fixed typo in SQL queries.

1.71 Beta 4 (2013-05-28):
  Added feature MR-435 - Add digital signature check to updater
  Fixed issue MR-255 - The version of the RDP AX client should be updated to 7
  Fixed issue MR-392 - Sessions Panel - context menu entries need to be context aware
  Fixed issue MR-422 - Gives error Object reference not set to an instance of an object.
  Fixed issue MR-424 - Import of a few Linux SSH2 hosts discovered via the port scan tool results in a UE
  Fixed issue MR-439 - MRemoteNG 1.70 does not start
  Fixed issue MR-440 - RDP import with non-standard port
  Fixed issue MR-443 - Instructions for eolwtscom.dll registration for Portable version are inaccurate
  Fixed issue MR-446 - Putty saved sessions show in connection panel
  Fixed issue MR-459 - Maximized -> Minimized -> Restored results in mangled active display
  Fixed issue MR-463 - Add support for LoadBalanceInfo to RDP
  Fixed issue MR-470 - Quick Connect to Linux server uses invalid credentials
  Fixed issue MR-471 - PuTTY Saved Sessions disappears from connection list
  Fixed issue MR-487 - Initiate connections on MouseUp event
  Added PuTTY Session Settings command to the Config panel for PuTTY Saved Sessions.
  Updated translations.
  Added Norwegian (Bokmål) and Portuguese (Brazil) translations.
  Added Spanish translation to the installer.